--- a/src/scss/core/_variables.scss
+++ b/src/scss/core/_variables.scss
@@ -2,7 +2,7 @@
 $color-dark: #20252d;
 $color-white: #fff;
 $color-black: #000;
-$color-primary: #f15d2a;
+$color-primary: #3371e3;
 $color-grey: #eef0f2;
 $color-text: #4a4a4a;
 
