--- a/src/scss/main.css
+++ b/src/scss/main.css
@@ -336,7 +336,7 @@ body {
   font-size: 1.6rem; }
 
 .home {
-  background: #eef0f2;
+  background: #ffffff;
   transition: background 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
   .home__container {
     display: flex;
@@ -398,7 +398,7 @@ body {
       color: #20252d;
       letter-spacing: 1px; }
       .home .content__title span {
-        color: #f15d2a; }
+        color: #3371e3; }
     @media (max-width: 575px) {
       .home .content {
         padding-top: 5rem; } }
@@ -420,7 +420,7 @@ body {
         letter-spacing: 1px;
         margin: 0;
         transition: 0.1s color;
-        color: #f15d2a;
+        color: #3371e3;
         font-weight: bold;
         margin-bottom: 2rem; }
       .home .content .options-select {
@@ -458,7 +458,7 @@ body {
     .home .content .board {
       background: #20252d;
       border-radius: 1rem;
-      border-left: 1rem solid #f15d2a;
+      border-left: 1rem solid #3371e3;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
@@ -555,13 +555,13 @@ body {
       left: 25px;
       transition: 0.5s; }
     .toggler input[type='checkbox']:checked ~ .switch {
-      background: #f15925;
+      background: #2f6ee2;
       transition: 0.5s; }
   .toggler .switch {
     display: block;
     width: 45px;
     height: 10px;
-    background: #f15d2a;
+    background: #3371e3;
     border-radius: 5px;
     position: absolute;
     top: 0;
